<resources>

  <string name="app_name">Share your party</string>
  <string name="hello_world">Hello world!</string>
  <string name="logo">logo</string>
  <string name="home_logo">home_logo</string>
  <string name="menu_settings">Settings</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="title_activity_login">Login</string>
  <string name="username">User Name</string>
  <string name="password">Password</string>
  <string name="password_confirmation">Confirm</string>
  <string name="loggin">Login</string>
  <string name="register">Register</string>
  <string name="forgotten_password">Forgot your password?</string>
  <string name="loading">Loading</string>
  <string name="alert_dialog_ok">OK</string>
  <string name="alert_dialog_yes">Yes</string>
  <string name="alert_dialog_no">No</string>
  <string name="secret_question_answer">Your answer</string>
  <string name="validate">Validate</string>
  <string name="old_password">Old password</string>
  <string name="new_password">New password</string>
  <string name="email">Email</string>
  <string name="confirm">Confirm</string>
  <string name="cancel">Cancel</string>
  <string name="settings">Settings</string>
  <string name="logout">Logout</string>
  <string name="profils_activity_Informations_Perso">Personal Info</string>
  <string name="profils_activity_Interets">Interests</string>
  <string name="profils_activity_Securite">Security</string>
  <string name="security_activity_question">Enter your question</string>
  <string name="security_activity_reponse">Enter your answer</string>
  <string name="security_activity_question_secrete">Question for password recovery</string>
  <string name="security_activity_changement_mdp">Change password</string>
  <string name="security_activity_ancien_mdp">Old password</string>
  <string name="security_activity_nouveau_mdp">New password</string>
  <string name="security_activity_nouveau_mdp_confim">Confirm password</string>
  <string name="security_activity_button_changement_mdp">Modify</string>
  <string name="security_activity_button_changement_question">Register</string>
  <string name="security_activity_mdp_question">Password</string>
  <string name="Sexe">Sex</string>
  <string name="fullName">Full name</string>
  <string name="DateDeNaissance">Birthday</string>
  <string name="checkin">Check\'in</string>
  <string name="grade">Grade</string>
  <string name="NoGrade">No grade</string>
  <string name ="age_label">Age average</string>
  <string name ="female_label">Man/Woman</string>
  <string name ="single_label">Single/Couple</string>
   <string name ="headcount_label">Headcount</string>
   <string name ="years">years</string>
   <string name ="people">people</string>
   <string name ="NotAvailable">Not available</string>

  <string-array name="sex_array">
    <item>Sex</item>
    <item>Male</item>
    <item>Female</item>
  </string-array>
  <string-array name="status_array">
    <item>Status</item>
    <item>With someone</item>
    <item>Single</item>
  </string-array>

    <string name="Statut">Statut :</string>
    <string name="BirthdayDate">JJ/MM/AAAA</string>
    
    <string name="Events">Events</string>
    <string name="Add_Event">Add event</string>
    
    <string name="EventName">Name</string>
    <string name="StartEventHour">14</string>
    <string name="StartEventMinute">00</string>
    <string name="EndEventHour">15</string>
    <string name="EndEventMinute">00</string>
    <string name="PriceEvent">Price</string>
    <string name="DescriptionEvent">Description</string>
    <string name="NextStep">Next step</string>
	<string name="StartEvent">Start event</string>
    <string name="EndEvent">End event</string>
    
    <string name="PlaceName">Place name</string>
    <string name="AddressLocalPlace">Address</string>
    <string name="DescriptionLocalPlace">Description</string>
    
    <string name="ManagePersonalEventActivity_Edit">Edit</string>
	<string name="ManagePersonalEventActivity_Delete">Delete</string>
	<string name="ManagePersonalEventActivity_Close">Close</string>
	<string name="ManagePersonalEventActivity_Open">Open</string>
    
	<string name="Comment">Comment</string>
	<string name="SendButton">Send</string>
	
    <string-array name="place_type_array">
        <item>Bar</item>
        <item>NightClub</item>
        <item>Restaurant</item>
    </string-array>
    
    <!-- Popups -->
    <string name="initWrongUsernameOrPassword_title">Wrong informations</string>
    <string name="initWrongUsernameOrPassword_text">You have entered a wrong username or password</string>
    <string name="initIncompleatData_title">Incomplete data</string>
    <string name="initIncompleatData_text">You haven\'t compleated all the fields</string>
    <string name="InvalidEmail_title">Invalid email</string>
    <string name="InvalidEmail_text">You haven\'t entered a valid email</string>
    <string name="EmailAlreadyUsed_title">E-mail already used</string>
    <string name="EmailAlreadyUsed_text">The email you have entered is already used</string>
    <string name="UsernameAlreadyUsed_title">Username already used</string>
    <string name="UsernameAlreadyUsed_text">The username you have entered is already used</string>
    <string name="passwordTooShort_title">The password is too short</string>
    <string name="passwordTooShort_text">Please enter a min 4 chars password</string>
    <string name="passwordsDontMatch_title">Passwords don\'t match</string>
    <string name="passwordsDontMatch_text">The passwrods don\'t match</string>
    <string name="curentPasswordWrong_title">Password don\'t match</string>
    <string name="curentPasswordWrong_text">The current password is wrong</string>
    <string name="WrongUsername_title">Wrong Username</string>
    <string name="WrongUsername_text">The username does not exist.</string>
    <string name="NoSecretQuestion_title">No security question</string>
    <string name="NoSecretQuestion_text">You have not specified any secret question in your profile.</string>
	<string name="WrongAnswer_title">Wrong Answer</string>
	<string name="WrongAnswer_text">Your answer or birthday is incorrect.</string>
	<string name="dateFormatWrong_title">Wrong date </string>
    <string name="dateFormatWrong_text">Please enter a valid date (DD MM YYYY)</string>
    <string name="timeFormatWrong_title">Wrong time</string>
    <string name="timeFormatWrong_text">Please enter a valid time.</string>
    <string name="WrongData_title">Wrong Data</string>
    <string name="WrongData_text">The specified data are wrong.</string>
    <string name="DifferentPassword_title">Different password</string>
    <string name="DifferentPassword_text">The two passwords are not the same.</string>
    <string name="canteditArea_title">You can\'t edit this event </string>
    <string name="canteditArea_text">You are not close enough to the event location to edit this event</string>
    <string name="delete_event_title">Delete event</string>
    <string name="delete_event_text">Are you sure you want to delete this event? </string>
    <string name="personal_info_update_ok_title">Personal Information</string>
    <string name="personal_info_update_ok_text">Your data have been successfully updated !</string>
    <string name="security_question_update_ok_title">Security question</string>
    <string name="security_question_update_ok_text">Your security question has been successfully updated !</string>
    <string name="thank_grade_event_title">Event grade</string>
    <string name="thank_grade_event_text">Thank you for grading this event !</string>
    <string name="ViewName">Name</string>
    <string name="incomplete_profile_title">Incomplete Data</string>
    <string name="incomplete_profile_text">Please fill your personal data</string>
    
    
    <string name ="checked_in">You have been check-in into </string>
        <string name ="checked_in_opinion">How is the buzz? </string>
        
        <string name="new_event">Yahoo! A new event has been added!</string>
    
    
    <!-- Page titles -->
	<string name="ForgotPasswordTitle">Recovery pwd</string>
	<string name="LoginTitle">Log in</string>
	<string name="RegisterTitle">Register</string>
	<string name="ResetPasswordTitle">Reset pwd</string>
	<string name="CreateEventTitle">New event</string>
	<string name="AccountTitle">Account</string>
	<string name="InterestTitle">Interests</string>
	<string name="PersonalInfoTitle">Personal Infos</string>
	<string name="SecurityTitle">Security</string>
	<string name="NoTitle"></string>
	<string name="ManagePersonalEvent">Manage event</string>
	<string name="CreateLocalPlace">Current Location</string>
	<string name="GetPlaces">Location</string>
	<string name="GetEventDetail">Details</string>
	
	<!-- Popup_filter -->
	<string name="int_pop_filt">Intrests</string>
	<string name="radious_pop_filt">Distance</string>
		<string name="prix_pop_filt">Price</string>
		<string name="hours_pop_filt">Time</string>
		
</resources>
