<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
   
<LinearLayout
    android:id="@+id/login3_backgorund"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:background="@drawable/roundbackground"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:background="@drawable/text_edit"
        style="@style/text_edit" >

        <requestFocus />

    </EditText>
    
    <EditText
    	android:id="@+id/renewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:background="@drawable/text_edit"
        style="@style/text_edit" >
        
    </EditText>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/form_padding">

        <Button
            android:id="@+id/validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/validate"
            android:background="@drawable/blue_button"
            style="@style/button_text" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel"
            android:background="@drawable/red_button"
            style="@style/button_text" />

    </LinearLayout>
    
</LinearLayout>
</ScrollView>
