<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:id="@+id/abstractLinearLayoutGlobal">

    <LinearLayout
        android:id="@+id/abstract_header_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/top_bar">

        <ImageView
            android:id="@+id/abstract_header_picto_right"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="2dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            android:visibility="visible" />
        
        <LinearLayout 
            android:id="@+id/abstract_header_layout2"
	        android:layout_width="250dp"
	        android:layout_height="match_parent"
	        android:orientation="horizontal">
	        
            <TextView
            android:id="@+id/pageTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ViewName" />
            
        </LinearLayout>
        
        <ImageView
            android:id="@+id/abstract_header_picto_left"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:src="@drawable/home_icon"
            android:layout_gravity="right"
            android:gravity="right"
            android:contentDescription="@string/home_logo"
            android:visibility="visible" />
        
    </LinearLayout>

	<LinearLayout
	    android:id="@+id/abstractLinearLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/content_bg"
	    android:gravity="center"
	    android:orientation="vertical" >

	</LinearLayout>

		<LinearLayout
		    android:id="@+id/abstractLinearLayoutTop"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:background="@drawable/content_bg"
		    android:orientation="vertical"
		    android:visibility="gone" >

	</LinearLayout>
</LinearLayout>