<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical" >
    
   
<LinearLayout
    android:id="@+id/login_backgorund"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:background="@drawable/roundbackground"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/username"
        android:paddingTop="@dimen/form_padding" >

        <requestFocus android:layout_width="wrap_content" />

    </EditText>

    <EditText
        android:id="@+id/secretQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="none"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        android:paddingTop="@dimen/form_padding" />
    
    <EditText
        android:id="@+id/secretQuestionAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/secret_question_answer"
        android:inputType="text"
        android:paddingTop="@dimen/form_padding" />
    <!-- 
    <DatePicker 
        android:id="@+id/birthday" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:startYear="1920"
        android:endYear="2100"
        android:ems="10" />
    -->
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/form_margin" >
        
   	 <EditText
   	    android:id="@+id/days"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:ems="10"
        android:hint="01"
        android:inputType="number"
        android:maxLength="2"/>
   	 
   	 <EditText
   	    android:id="@+id/months"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:ems="10"
        android:hint="01"
        android:inputType="number"
        android:maxLength="2"/>
   	 
   	 <EditText
   	    android:id="@+id/years"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:ems="10"
        android:hint="1990"
        android:inputType="number"
        android:maxLength="4"/>
   	 
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/form_margin" >

        <Button
            android:id="@+id/validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/validate" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel" />

    </LinearLayout>
    
</LinearLayout>
</LinearLayout>